# aplib-extractor

./: .travis.yml  Cargo.toml  README  README.md
.github/workflows/: rust.yml
docs/: format.md
src/: album.rs  audit.rs  custominfo.rs  exif.rs  folder.rs  iptc.rs  keyword.rs  lib.rs  library.rs  main.rs  master.rs  notes.rs  plutils.rs  store.rs  testutils.rs  version.rs  volume.rs  xmp.rs
src/aplib/: album.rs  folder.rs  keyword.rs  library.rs  master.rs  mod.rs  plutils.rs  store.rs  version.rs  wrapper.rs
testdata/: Master.apmaster  Version-0.apversion  a%TX9lmjQVWvuK9u6RNhGQ.apfolder  gOnttfpzQoOxcwLpFS9DQg.apalbum  x6yNun58SB2sImfCarTJHA.apalbum
