[package]
name = "aplib-extractor"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
exempi2 = "0.2.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
plist = "1.3.1"

docopt = { version = "1.1.1", optional = true }
pbr = { version = "1.0.0", optional = true }
serde = { version = "1.0.130", optional = true, features = ["derive"] }

[lib]
name = "aplib"

[[bin]]
name = "dumper"
required-features = ["binaries"]

[features]
default = ["binaries"]
binaries = ["docopt", "pbr", "serde" ]
