[package]
name = "aplib-extractor"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2021"

[dependencies]
chrono = "0.4.19"
exempi2 = "0.2.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
plist = "1.3.1"
thiserror = "1.0.48"

clap = { version = "4.4", optional = true, features = ["derive"] }
pbr = { version = "1.0.0", optional = true }
num-derive = "0.4.0"
num-traits = "0.2.16"

[lib]
name = "aplib"

[[bin]]
name = "dumper"
required-features = ["binaries"]

[features]
default = ["binaries"]
binaries = ["clap", "pbr"]
