[package]
name = "aplib-extractor"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2021"
description = "Extract data from Apple Aperture™ libraries."
license = "MPL-2.0"
repository = "https://github.com/hfiguiere/aplib-extractor"
documentation = "https://docs.rs/aplib-extractor/"

[dependencies]
chrono = "0.4.19"
exempi2 = "0.2.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
num-derive = "0.4.0"
num-traits = "0.2.16"
once_cell = "1.18.0"
plist = "1.3.1"
rusqlite = "0.29.0"
thiserror = "2"

clap = { version = "4.4", optional = true, features = ["derive"] }
pbr = { version = "1.0.0", optional = true }

[lib]
name = "aplib"

[[bin]]
name = "dumper"
required-features = ["binaries"]

[features]
default = ["binaries"]
binaries = ["clap", "pbr"]
